# osphor

./: Cargo.toml  README.md  data.db
.github/workflows/: rust-ci.yml  test.yml
.github/workspaces/: rust-ci.yml  security-audit.yml
server/: data.db
src/: database.rs  main.rs  model.rs  packets.rs  routes.rs
src/model/: player.rs
tests/: api.rs
