[package]
name = "osphor"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
chrono = "0.4.40"
clap = {version = "4.5.31", features = ["derive"]}
rand = "0.9.0"
reqwest = "0.12.12"
rusqlite = "0.33.0"
serde = {version = "1.0.218", features = ["derive"]}
serde_json = "1.0.139"
sled = "0.34.7"
tokio = {version = "1.43.0", features = ["rt-multi-thread", "macros"]}
warp = "0.3.7"
