[package]
name = "osphor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
argon2-kdf = "1.5.4"
axum = "0.8.1"
axum-extra = {version = "0.10.0", features = ["typed-header"]}
chrono = "0.4.40"
clap = {version = "4.5.31", features = ["derive"]}
hex = "0.4.3"
hmac = "0.12.1"
jsonwebtoken = "9.3.1"
mlua = {version="0.10.3", features= ["luau"]}
rand = "0.9.0"
redb = "2.4.0"
reqwest = "0.12.12"
serde = {version = "1.0.218", features = ["derive"]}
serde_json = "1.0.139"
sha2 = "0.10.8"
skillratings = {version="0.27.1", features = ["serde"]}
tokio = {version = "1.43.0", features = ["rt-multi-thread", "macros"]}
